compiler/src/test/resources/golden/errors/type_eq_functions.dawn
fn f(g: fn(Int) -> Int, h: fn(Int) -> Int) -> Bool = g == h
