compiler/src/test/resources/golden/errors/type_eq_functions.err
error: functions cannot be compared
  --> type_eq_functions.dawn:1:56
  |
1 | fn f(g: fn(Int) -> Int, h: fn(Int) -> Int) -> Bool = g == h
  |                                                        ^^
  = hint: compare the values they produce, not the functions themselves
